[package]
name = "adnt"
version = "0.1.0"
edition = "2021"
description = "Dynamic CLI tool manager for ADNT projects - auto-discovers, installs, and manages tools from ADNTIO"
authors = ["ADNT Sàrl <info@adnt.io>"]
license = "GPL-3.0"
repository = "https://github.com/ADNTIO/adnt"
keywords = ["cli", "tool-manager", "adnt", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
indicatif = "0.17"
dirs = "5.0"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
open = "5.0"

[[bin]]
name = "adnt"
path = "src/main.rs"
